Revert "Display memory pool #628"